[project]
name = "dbf"
version = "0.1.0"
description = "Experiments with Downtown Bodega filters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blake3>=1.0.4",
    "matplotlib>=3.10.1",
    "rbloom>=1.5.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
]
